--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson3-tm2.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson3-tm2.html
@@ -24,12 +24,12 @@
 
       <div class="col-sm-12 col-md-12">
         <div class="col-sm-12 col-md-12">
-        <strong>Robert</strong> <img class="img-responsive" src="{% static 'img/modulo1/unity1/flag1.png' %}" alt="No found">
-        <strong>Philippe</strong> <img class="img-responsive" src="{% static 'img/modulo1/unity1/flag2.png' %}" alt="No found">
-        <strong>Anna and Bruno</strong> <img class="img-responsive" src="{% static 'img/modulo1/unity1/flag3.png' %}" alt="No found">
-        <strong>Matt</strong> <img class="img-responsive" src="{% static 'img/modulo1/unity1/flag4.png' %}" alt="No found">
-        <strong>Gabriela and Juana</strong> <img class="img-responsive" src="{% static 'img/modulo1/unity1/flag5.png' %}" alt="No found">
-        <strong>Linda</strong> <img class="img-responsive" src="{% static 'img/modulo1/unity1/flag6.png' %}" alt="No found"> 
+        <strong>Robert</strong> <img src="{% static 'img/modulo1/unity1/flag1.png' %}" alt="No found">
+        <strong>Philippe</strong> <img src="{% static 'img/modulo1/unity1/flag2.png' %}" alt="No found">
+        <strong>Anna and Bruno</strong> <img src="{% static 'img/modulo1/unity1/flag3.png' %}" alt="No found">
+        <strong>Matt</strong> <img src="{% static 'img/modulo1/unity1/flag4.png' %}" alt="No found">
+        <strong>Gabriela and Juana</strong> <img src="{% static 'img/modulo1/unity1/flag5.png' %}" alt="No found">
+        <strong>Linda</strong> <img src="{% static 'img/modulo1/unity1/flag6.png' %}" alt="No found"> 
         </div>
         <div class="col-sm-6 col-md-6">
               <li><strong>Robert</strong>
