--- a/templates/contenidos/unidad2/modulo2-unidad1-lesson1-tm1.html
+++ b/templates/contenidos/unidad2/modulo2-unidad1-lesson1-tm1.html
@@ -35,7 +35,7 @@ I usually go to bed at 10:30 pm.</li>
 
 <br>
       <div class="centered">
-          <img src="{% static 'img/modulo2/Modulo2Lesson1Theme1.PNG' %}" class="img-responsive" alt=""/>
+          <img src="{% static 'img/modulo2/Modulo2Lesson1Theme1.png' %}" class="img-responsive" alt=""/>
       </div>
         <br />
 
@@ -101,7 +101,7 @@ sentences a-j under the correct name.</p>
 
       <div class="col-sm-8 col-md-8">
         <div class="centered">
-          <img src="{% static 'img/modulo2/Modulo2Lesson1Theme1img2.PNG' %}" class="img-responsive" alt=""/>
+          <img src="{% static 'img/modulo2/Modulo2Lesson1Theme1img2.png' %}" class="img-responsive" alt=""/>
       </div>  
       </div>
         
