--- a/templates/contenidos/unidad2/modulo2-unidad1-lesson1-tm2.html
+++ b/templates/contenidos/unidad2/modulo2-unidad1-lesson1-tm2.html
@@ -24,7 +24,7 @@ write them in order in your notebook.</p>
       <p>get up = 6:00 am</p>
 
       <div class="centered">
-          <img src="{% static 'img/modulo2/Modulo2Lesson1Theme2.PNG' %}" class="img-responsive" alt=""/>
+          <img src="{% static 'img/modulo2/Modulo2Lesson1Theme2.png' %}" class="img-responsive" alt=""/>
       </div>
         <br />
 
