--- a/templates/contenidos/unidad2/modulo2-unidad1-lesson1-tm4.html
+++ b/templates/contenidos/unidad2/modulo2-unidad1-lesson1-tm4.html
@@ -25,11 +25,11 @@
           
     <br>
       <div class="centered">
-          <img src="{% static 'img/modulo2/Modulo2Lesson1Theme4.PNG' %}" class="img-responsive" alt=""/>
+          <img src="{% static 'img/modulo2/Modulo2Lesson1Theme4.png' %}" class="img-responsive" alt=""/>
       </div>
         <br />
         <div class="centered">
-          <img src="{% static 'img/modulo2/Modulo2Lesson1Theme4img2.PNG' %}" class="img-responsive" alt=""/>
+          <img src="{% static 'img/modulo2/Modulo2Lesson1Theme4img2.png' %}" class="img-responsive" alt=""/>
       </div>
     <br>
      <h2>WRITE</h2>
