--- a/templates/contenidos/unidad2/modulo2-unidad1-lesson3-tm1.html
+++ b/templates/contenidos/unidad2/modulo2-unidad1-lesson3-tm1.html
@@ -22,7 +22,7 @@
       <p>1. Look at the daily activities and write them in the chart in your notebook.</p>
 
     <div class="centered">
-      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme1img1.png' %}" class="img-responsive" alt="No found"/>
     </div>
     
     <div class="col-sm-12 col-md-12"></div>
@@ -43,7 +43,7 @@
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
     <div class="centered">
-      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme1img2.png' %}" class="img-responsive" alt="No found"/>
     </div>
       </div>
 
