--- a/templates/contenidos/unidad2/modulo2-unidad2-lesson1-tm1.html
+++ b/templates/contenidos/unidad2/modulo2-unidad2-lesson1-tm1.html
@@ -26,7 +26,7 @@ your notebook.</p>
       Tom cycles to school every day.</p>
 
     <div class="centered">
-      <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+      <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme1img1.png' %}" class="img-responsive" alt="No found"/>
     </div>
     
     <p>2. Find the activity that is different.</p>
