--- a/templates/contenidos/unidad2/modulo2-unidad2-lesson1-tm3.html
+++ b/templates/contenidos/unidad2/modulo2-unidad2-lesson1-tm3.html
@@ -27,7 +27,7 @@
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -51,7 +51,7 @@
     <p>7. Complete the text with the correct form of the verb affirmative (+) or negative (-).</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <p>8. Listen and repeat. pay attention to the sound of don’t / doesn’t.</p>
@@ -136,7 +136,7 @@
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme3img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme3img3.png' %}" class="img-responsive" alt="No found"/>
       </div>   
       </div>
     </div>
