--- a/templates/contenidos/unidad2/modulo2-unidad2-lesson2-tm1.html
+++ b/templates/contenidos/unidad2/modulo2-unidad2-lesson2-tm1.html
@@ -24,7 +24,7 @@
       <p>Example: 1 = rainy</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
     
       <p>2. Listen to five people describing the weather in the places in exercise 1.
@@ -38,11 +38,11 @@ Match the speakers a-e to the pictures 1-5.</p>
     <p>3. Match the adjectives describing temperature to pictures 1-4.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme1img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme1img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>4. Describe the weather where you are today.</p>
