--- a/templates/contenidos/unidad2/modulo2-unidad2-lesson3-tm1.html
+++ b/templates/contenidos/unidad2/modulo2-unidad2-lesson3-tm1.html
@@ -22,13 +22,13 @@
       <p>1. Read what people say about music. Which person is most like you?</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson3Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson3Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>2. Walk around the classroom and ask your classmates the questions.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson3Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson3Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       
       <p>3. Compare your answers with the rest of the class. Which type of music is the
