--- a/templates/contenidos/unidad2/modulo2-unidad2-lesson3-tm2.html
+++ b/templates/contenidos/unidad2/modulo2-unidad2-lesson3-tm2.html
@@ -22,7 +22,7 @@
       <p>4. Read the text and answer the questions Yes (Y) or no (n). Correct the no answers.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson3Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson3Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -47,7 +47,7 @@
       <p>6. Complete the sentences with the words below so they are true for you.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson3Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson3Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
