--- a/templates/contenidos/unidad2/modulo2-unidad2-lesson3-tm3.html
+++ b/templates/contenidos/unidad2/modulo2-unidad2-lesson3-tm3.html
@@ -102,7 +102,7 @@ the sentences so they are true about you and your family.</p>
     </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson3Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson3Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       </div>
