--- a/templates/contenidos/unidad2/modulo2-unidad2-lesson3-tm4.html
+++ b/templates/contenidos/unidad2/modulo2-unidad2-lesson3-tm4.html
@@ -59,7 +59,7 @@ she/it, we, they.
       <p>13. Use the words in the box to write questions.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson3Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson3Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <p>14. Now write five yes/no questions to ask your classmates about their taste in music.
