--- a/templates/contenidos/unidad2/modulo2-unidad3-lesson1-tm3.html
+++ b/templates/contenidos/unidad2/modulo2-unidad3-lesson1-tm3.html
@@ -22,7 +22,7 @@
       <p>8. Complete the phrases a-i with the correct verb from the box.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -98,7 +98,7 @@ tenth sixteenth twenty-seventh thirty-first <br>
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       </div>
