--- a/templates/contenidos/unidad2/modulo2-unidad3-lesson1-tm4.html
+++ b/templates/contenidos/unidad2/modulo2-unidad3-lesson1-tm4.html
@@ -22,7 +22,7 @@
       <p>13. In your notebook, write information about these celebrations.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>14. Share the ideas from exercise 13 with a classmate. Are they similar? What are the differences?</p>
@@ -46,7 +46,7 @@ Date / Time: <br>
 Activities:</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       </div>
