--- a/templates/contenidos/unidad2/modulo2-unidad3-lesson2-tm1.html
+++ b/templates/contenidos/unidad2/modulo2-unidad3-lesson2-tm1.html
@@ -22,7 +22,7 @@
       <p>1. Match the sentences to the pictures 1-8.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson2Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson2Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
     
     <p>2. Ask and answer the questions with a classmate.</p>
