--- a/templates/contenidos/unidad2/modulo2-unidad3-lesson2-tm3.html
+++ b/templates/contenidos/unidad2/modulo2-unidad3-lesson2-tm3.html
@@ -22,7 +22,7 @@
       <p>8. Read the text and the sentences. Then say if sentences a-f are true (T) or false (F)?</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson2Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson2Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     
