--- a/templates/contenidos/unidad2/modulo2-unidad1-lesson1-tm3.html
+++ b/templates/contenidos/unidad2/modulo2-unidad1-lesson1-tm3.html
@@ -70,7 +70,7 @@ notebook. Correct the false sentences.</p>
 
       <div class="col-sm-6 col-md-6">
         <div class="centered">
-          <img src="{% static 'img/modulo2/Modulo2Lesson1Theme3.PNG' %}" class="img-responsive" alt=""/>
+          <img src="{% static 'img/modulo2/Modulo2Lesson1Theme3.png' %}" class="img-responsive" alt=""/>
       </div>
       </div>
 
