--- a/templates/contenidos/unidad2/modulo2-unidad1-lesson3-tm2.html
+++ b/templates/contenidos/unidad2/modulo2-unidad1-lesson3-tm2.html
@@ -22,7 +22,7 @@
       <p>4. Read about my sister’s daily routine. Put the activities in order.</p>
 
     <div class="centered">
-      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme2img1.png' %}" class="img-responsive" alt="No found"/>
     </div>
 
     <p>Example: 1 c</p>
