--- a/templates/contenidos/unidad2/modulo2-unidad1-lesson3-tm3.html
+++ b/templates/contenidos/unidad2/modulo2-unidad1-lesson3-tm3.html
@@ -29,12 +29,12 @@ times in the chart in your notebook.</p>
 
 
     <div class="centered">
-      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme3img1.png' %}" class="img-responsive" alt="No found"/>
     </div>
 
 
     <div class="centered">
-      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme3img2.png' %}" class="img-responsive" alt="No found"/>
     </div>
     
     <div class="col-sm-12 col-md-12"></div>
@@ -52,7 +52,7 @@ times in the chart in your notebook.</p>
 
       <div class="col-sm-6 col-md-6">
     <div class="centered">
-      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme3img3.PNG' %}" class="img-responsive" alt="No found"/>
+      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme3img3.png' %}" class="img-responsive" alt="No found"/>
     </div>
       </div>
     </div>
