--- a/templates/contenidos/unidad2/modulo2-unidad1-lesson3-tm4.html
+++ b/templates/contenidos/unidad2/modulo2-unidad1-lesson3-tm4.html
@@ -24,7 +24,7 @@
       <p>Example: in the mornings, around midday …</p>
 
     <div class="centered">
-      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme4img1.png' %}" class="img-responsive" alt="No found"/>
     </div>
 
     <table class="table table-bordered">
@@ -49,7 +49,7 @@
     and to check your work when you finish.</p>
 
     <div class="centered">
-      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme4img2.png' %}" class="img-responsive" alt="No found"/>
     </div>
     
     <div class="col-sm-12 col-md-12"></div>
@@ -71,7 +71,7 @@ Melissa gets up early. She gets up at 5:30 am</p>
 
       <div class="col-sm-6 col-md-6">
     <div class="centered">
-      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme4img3.PNG' %}" class="img-responsive" alt="No found"/>
+      <img src="{% static 'img/modulo2/Modulo2Lesson3Theme4img3.png' %}" class="img-responsive" alt="No found"/>
     </div>
       </div>
     </div>
