--- a/templates/contenidos/unidad2/modulo2-unidad2-lesson1-tm2.html
+++ b/templates/contenidos/unidad2/modulo2-unidad2-lesson1-tm2.html
@@ -22,7 +22,7 @@
       <p>4. Read the text. Which dances can you see in the pictures?</p>
 
     <div class="centered">
-      <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+      <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme2img1.png' %}" class="img-responsive" alt="No found"/>
     </div>
     
     <br>
