--- a/templates/contenidos/unidad2/modulo2-unidad2-lesson1-tm4.html
+++ b/templates/contenidos/unidad2/modulo2-unidad2-lesson1-tm4.html
@@ -30,13 +30,13 @@ you hear in your notebook.</p>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -87,7 +87,7 @@ I think it’s dangerous / fun. OR I don’t think it’s boring.</p>
 do and why. Use the example below to help you.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme4img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson1Theme4img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       </div>
