--- a/templates/contenidos/unidad2/modulo2-unidad2-lesson2-tm2.html
+++ b/templates/contenidos/unidad2/modulo2-unidad2-lesson2-tm2.html
@@ -22,14 +22,14 @@
       <p>5. Match the seasons in the box to the people. Then read the text and check your answers.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme2img1.ng' %}" class="img-responsive" alt="No found"/>
       </div>
 
         <br>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-8 col-md-8">
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme2img2.ng' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
