--- a/templates/contenidos/unidad2/modulo2-unidad2-lesson2-tm3.html
+++ b/templates/contenidos/unidad2/modulo2-unidad2-lesson2-tm3.html
@@ -24,7 +24,7 @@
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
@@ -93,7 +93,7 @@ carry = llevar (en sus manos)
       <p>9. Match the words to the clothes 1-12.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
