--- a/templates/contenidos/unidad2/modulo2-unidad2-lesson2-tm4.html
+++ b/templates/contenidos/unidad2/modulo2-unidad2-lesson2-tm4.html
@@ -25,11 +25,11 @@ map. Describe what people wear in that type of weather and what they
 usually do. Look at the example to help you.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad2Lesson2Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
     
     <div class="col-sm-12 col-md-12"></div>
