--- a/templates/contenidos/unidad2/modulo2-unidad3-lesson1-tm1.html
+++ b/templates/contenidos/unidad2/modulo2-unidad3-lesson1-tm1.html
@@ -24,7 +24,7 @@
       <p>Valentine’s Day Halloween Carnival Independence Day</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>2. What other festivals do you know? Write a list in your notebook.</p>
@@ -37,7 +37,7 @@
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>4. Listen again and complete the sentences.</p>
