--- a/templates/contenidos/unidad2/modulo2-unidad3-lesson1-tm2.html
+++ b/templates/contenidos/unidad2/modulo2-unidad3-lesson1-tm2.html
@@ -22,7 +22,7 @@
       <p>5. Read about the celebrations and match them to the pictures.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/Modulo2Unidad3Lesson1Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>6. Read the text again and answer the questions.</p>
