--- a/templates/contenidos/unidad2/modulo2-unidad3-lesson2-tm4.html
+++ b/templates/contenidos/unidad2/modulo2-unidad3-lesson2-tm4.html
@@ -25,7 +25,7 @@ Look at pages 76 and 77 to help you.</p>
     <p>Example: When do you usually go on holiday?</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo2/img/Modulo2Unidad3Lesson2Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/img/Modulo2Unidad3Lesson2Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>11. Now ask and answer the questions to find out
@@ -36,13 +36,13 @@ answers in your notebook.</p>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo2/img/Modulo2Unidad3Lesson2Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/img/Modulo2Unidad3Lesson2Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo2/img/Modulo2Unidad3Lesson2Theme4img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo2/img/Modulo2Unidad3Lesson2Theme4img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
