--- a/templates/contenidos/unidad2/modulo2.html
+++ b/templates/contenidos/unidad2/modulo2.html
@@ -29,7 +29,7 @@
         <div class="row">
         <div class="col-md-8 col-lg-8">
       <br />
-      <img src="{% static 'img/modulo2/modulo2.PNG' %}" class="img-responsive" alt=""/>
+      <img src="{% static 'img/modulo2/modulo2.png' %}" class="img-responsive" alt=""/>
             </div>
       <div class="col-md-4 col-lg-4">
           <br />
