--- a/templates/contenidos/unidad3/modulo3-unidad1-lesson1-tm3.html
+++ b/templates/contenidos/unidad3/modulo3-unidad1-lesson1-tm3.html
@@ -42,7 +42,7 @@ What is it?</p>
     </table>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>11. Are the statements true (T) or false (f)?</p>
@@ -64,7 +64,7 @@ ingredients of Ajiaco. __________</li>
     <p>12. Complete the descriptions about each dish.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
     
       </div>
