--- a/templates/contenidos/unidad3/modulo3-unidad1-lesson2-tm4.html
+++ b/templates/contenidos/unidad3/modulo3-unidad1-lesson2-tm4.html
@@ -22,7 +22,7 @@
       <p>10. Read the text and answer the questions a-e.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
