--- a/templates/contenidos/unidad3/modulo3-unidad1-lesson3-tm2.html
+++ b/templates/contenidos/unidad3/modulo3-unidad1-lesson3-tm2.html
@@ -27,21 +27,21 @@ On Mondays, I eat burgers and chips.</p>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       </div>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       </div>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme2img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme2img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       </div>
@@ -88,7 +88,7 @@ main meal = comida principal <br>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme2img4.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme2img4.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
