--- a/templates/contenidos/unidad3/modulo3-unidad2-lesson1-tm4.html
+++ b/templates/contenidos/unidad3/modulo3-unidad2-lesson1-tm4.html
@@ -58,7 +58,7 @@ She doesn't like coffee.
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -69,7 +69,7 @@ She doesn't like coffee.
 in exercise 9 to help you.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
     
       </div>
