--- a/templates/contenidos/unidad3/modulo3-unidad3-lesson1-tm2.html
+++ b/templates/contenidos/unidad3/modulo3-unidad3-lesson1-tm2.html
@@ -22,17 +22,17 @@
       <p>4. Match the sentences to the pictures.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>5. n ow put the activities in exercise 4 into the correct column.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme2img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme2img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
     
       </div>
