--- a/templates/contenidos/unidad3/modulo3-unidad3-lesson1-tm3.html
+++ b/templates/contenidos/unidad3/modulo3-unidad3-lesson1-tm3.html
@@ -22,11 +22,11 @@
       <p>6. Read about Jimmy and complete his diary in your notebook.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>7. Read the text again. Are the sentences true (T), false (F) or the text doesn’t say (DS)?</p>
@@ -54,7 +54,7 @@ morning.</li>
       <p>8. In your notebook, write the sports from exercise 7 in the chart.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme3img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme3img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
    <p>9. Write the three activities that match
