--- a/templates/contenidos/unidad3/modulo3-unidad3-lesson1-tm4.html
+++ b/templates/contenidos/unidad3/modulo3-unidad3-lesson1-tm4.html
@@ -37,7 +37,7 @@
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -79,13 +79,13 @@ and frequency adverbs.</p>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme4img4.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme4img4.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme4img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme4img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -102,7 +102,7 @@ and frequency adverbs.</p>
       <p>Use time expressions, frequency adverbs and adjectives.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme4img5.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme4img5.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       </div>
