--- a/templates/contenidos/unidad3/modulo3-unidad3-lesson2-tm1.html
+++ b/templates/contenidos/unidad3/modulo3-unidad3-lesson2-tm1.html
@@ -21,7 +21,7 @@
         <hr>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson2Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson2Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>1. Look at the pictures and match them to the phrases a-l.</p>
