--- a/templates/contenidos/unidad3/modulo3-unidad3-lesson2-tm4.html
+++ b/templates/contenidos/unidad3/modulo3-unidad3-lesson2-tm4.html
@@ -22,7 +22,7 @@
         <p>12. Match the pictures to the phrases a-f.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson2Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson2Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
