--- a/templates/contenidos/unidad4/modulo4-unidad1-lesson1-tm3.html
+++ b/templates/contenidos/unidad4/modulo4-unidad1-lesson1-tm3.html
@@ -37,7 +37,7 @@ Write the words in your notebook.</p>
     </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>6. Listen again and complete the
@@ -50,11 +50,11 @@ in your notebook.</p>
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme3img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme3img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -67,7 +67,7 @@ in your notebook.</p>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme3img4.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme3img4.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
