--- a/templates/contenidos/unidad4/modulo4-unidad1-lesson2-tm1.html
+++ b/templates/contenidos/unidad4/modulo4-unidad1-lesson2-tm1.html
@@ -23,17 +23,17 @@
 uses most water?</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>2. In pairs, do the quiz.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme1img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme1img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       </div>
