--- a/templates/contenidos/unidad4/modulo4-unidad1-lesson2-tm2.html
+++ b/templates/contenidos/unidad4/modulo4-unidad1-lesson2-tm2.html
@@ -22,13 +22,13 @@
         <p>3. Look at the pictures. What can you see? What are the people doing? Why?</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>4. Read the text. How many ideas to save water are mentioned? Can you think of any more?</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -55,7 +55,7 @@ brush your teeth = cepillarse los dientes
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme2img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme2img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
