--- a/templates/contenidos/unidad4/modulo4-unidad1-lesson2-tm4.html
+++ b/templates/contenidos/unidad4/modulo4-unidad1-lesson2-tm4.html
@@ -54,7 +54,7 @@ three times a day / week / month
 an expression from box b. make some of them negative with don’t.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -65,7 +65,7 @@ an expression from box b. make some of them negative with don’t.</p>
 again to help you. Also, use your own ideas.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
     </div>
 
