--- a/templates/contenidos/unidad4/modulo4-unidad1-lesson3-tm1.html
+++ b/templates/contenidos/unidad4/modulo4-unidad1-lesson3-tm1.html
@@ -22,17 +22,17 @@
         <p>1. Match the animals in the box to the pictures.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>2. Copy the table. For each category, write three animals from exercise 1.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme1img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme1img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>3. Read the descriptions and write the animals.</p>
