--- a/templates/contenidos/unidad4/modulo4-unidad1-lesson3-tm3.html
+++ b/templates/contenidos/unidad4/modulo4-unidad1-lesson3-tm3.html
@@ -24,7 +24,7 @@
         <p>11. Read Marta’s essay. How many examples does she give of animal cruelty?</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <table class="table table-bordered">
@@ -48,7 +48,7 @@ souvenir = recuerdo
       <p>12. Read the essay again. Copy and complete the table.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>13. Listen and put the numbers in order.
