--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson1-tm1.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson1-tm1.html
@@ -21,11 +21,11 @@
         <hr>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>1. Look at the pictures above. Match the phrases below to the pictures they describe.</p>
