--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson1-tm4.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson1-tm4.html
@@ -23,7 +23,7 @@
       <p>10. Read the poster that a class created as a project.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
         <p>11. In your notebooks, put the sentences into two categories: affirmative
