--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson2-tm1.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson2-tm1.html
@@ -23,15 +23,15 @@
       <p>1. Match pictures 1-6 to the natural disasters in the box.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme1img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme1img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
         <p>2. Speak to your partner. Do you know what to do in these natural disasters?
