--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson2-tm3.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson2-tm3.html
@@ -29,7 +29,7 @@ sister what to do in a practice earthquake drill.</p>
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>7. Complete the sentences about the earthquake drill with the correct words.</p>
