--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson3-tm1.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson3-tm1.html
@@ -24,7 +24,7 @@
 to the pictures.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson3Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson3Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
         <p>2. Complete the sentences with the correct words from exercise 1.</p>
