--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson3-tm3.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson3-tm3.html
@@ -23,7 +23,7 @@
       <p>6. Read the email and answer the questions.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson3Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson3Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
