--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson3-tm4.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson3-tm4.html
@@ -29,11 +29,11 @@ Student A: Are Sally and Diane playing the guitar in your picture? <br>
 Student B: No, they aren’t. They’re playing the drums..</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson3Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson3Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson3Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson3Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>10. Write a formal letter to a person or company asking them to collaborate with you
