--- a/templates/contenidos/unidad4/modulo4-unidad3-lesson2-tm4.html
+++ b/templates/contenidos/unidad4/modulo4-unidad3-lesson2-tm4.html
@@ -120,7 +120,7 @@ in 1997
     </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     </div>
