--- a/templates/contenidos/unidad3/modulo3-unidad1-lesson1-tm1.html
+++ b/templates/contenidos/unidad3/modulo3-unidad1-lesson1-tm1.html
@@ -23,7 +23,7 @@
 and the food you don’t like on the right.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
     
     <div class="col-sm-12 col-md-12"></div>
@@ -62,7 +62,7 @@ books /s/ pens /z/
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
 
