--- a/templates/contenidos/unidad3/modulo3-unidad1-lesson1-tm2.html
+++ b/templates/contenidos/unidad3/modulo3-unidad1-lesson1-tm2.html
@@ -25,7 +25,7 @@ and U for Uncountable.</p>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-8 col-md-8">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
@@ -89,7 +89,7 @@ and U for Uncountable.</p>
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <p>9. In your notebook, write what you usually have for each meal.</p>
