--- a/templates/contenidos/unidad3/modulo3-unidad1-lesson1-tm4.html
+++ b/templates/contenidos/unidad3/modulo3-unidad1-lesson1-tm4.html
@@ -22,7 +22,7 @@
       <p>13. Look at the chart. Write sentences to describe what is in the fridge.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
     
     <div class="col-sm-12 col-md-12">
@@ -39,7 +39,7 @@ some, any.</p>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -54,7 +54,7 @@ some, any.</p>
 lunch and dinner.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme4img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme4img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="col-sm-12 col-md-12"></div>
@@ -78,7 +78,7 @@ Why you like it:</p>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme4img4.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson1Theme4img4.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
