--- a/templates/contenidos/unidad3/modulo3-unidad1-lesson2-tm1.html
+++ b/templates/contenidos/unidad3/modulo3-unidad1-lesson2-tm1.html
@@ -25,7 +25,7 @@ why food is important for your body.</p>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       </div>
@@ -92,7 +92,7 @@ the food groups 1-6.</p>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -106,7 +106,7 @@ pyramid and check your answers.</p>
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme1img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme1img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
     
       </div>
