--- a/templates/contenidos/unidad3/modulo3-unidad1-lesson2-tm2.html
+++ b/templates/contenidos/unidad3/modulo3-unidad1-lesson2-tm2.html
@@ -34,7 +34,7 @@
     </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
     
       <div class="col-sm-12 col-md-12">
@@ -59,7 +59,7 @@ a day?</li>
        <p>6. Find these words in the text and match <br>
 them to the definitions.</p>
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
