--- a/templates/contenidos/unidad3/modulo3-unidad1-lesson2-tm3.html
+++ b/templates/contenidos/unidad3/modulo3-unidad1-lesson2-tm3.html
@@ -23,7 +23,7 @@
 much or How many. Then answer the questions in your notebook.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
 
@@ -103,7 +103,7 @@ I eat two portions of fruit every day.</p>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson2Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
