--- a/templates/contenidos/unidad3/modulo3-unidad1-lesson3-tm1.html
+++ b/templates/contenidos/unidad3/modulo3-unidad1-lesson3-tm1.html
@@ -22,11 +22,11 @@
       <p>1. Match the words in the box to the pictures 1-9.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>3. Ask and answer these questions with a partner.</p>
@@ -102,7 +102,7 @@ Burger and chips (burger ’n’ chips)
 
       <div class="col-sm-4 col-md-4">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme1img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme1img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
