--- a/templates/contenidos/unidad3/modulo3-unidad1-lesson3-tm3.html
+++ b/templates/contenidos/unidad3/modulo3-unidad1-lesson3-tm3.html
@@ -22,7 +22,7 @@
       <p>8. Match sentences a-f to pictures 1-6.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -37,7 +37,7 @@
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -53,7 +53,7 @@
     </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme3img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme3img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       </div>
