--- a/templates/contenidos/unidad3/modulo3-unidad1-lesson3-tm4.html
+++ b/templates/contenidos/unidad3/modulo3-unidad1-lesson3-tm4.html
@@ -22,7 +22,7 @@
       <p>10. Read the results of a survey. Are sentences a-c true (T) or false (F)?</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="col-sm-12 col-md-12">
@@ -42,7 +42,7 @@
 food items if you prefer.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>Example: How often do you eat rice? <br>
@@ -63,7 +63,7 @@ to help you.</p>
 
       <div class="col-sm-8 col-md-8">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme4img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad1Lesson3Theme4img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
