--- a/templates/contenidos/unidad3/modulo3-unidad2-lesson1-tm1.html
+++ b/templates/contenidos/unidad3/modulo3-unidad2-lesson1-tm1.html
@@ -22,11 +22,11 @@
       <p>1. Complete the descriptions with the words in the box.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <table class="table table-bordered">
@@ -56,7 +56,7 @@ Then listen and check.</p>
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme1img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme1img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
