--- a/templates/contenidos/unidad3/modulo3-unidad2-lesson1-tm2.html
+++ b/templates/contenidos/unidad3/modulo3-unidad2-lesson1-tm2.html
@@ -23,19 +23,19 @@
 many healthy and unhealthy food and drink words as you can in your notebook.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme2img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme2img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -50,7 +50,7 @@ you have them.</p>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme2img4.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme2img4.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
