--- a/templates/contenidos/unidad3/modulo3-unidad2-lesson1-tm3.html
+++ b/templates/contenidos/unidad3/modulo3-unidad2-lesson1-tm3.html
@@ -27,19 +27,19 @@
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme3img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme3img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -53,7 +53,7 @@
         <p>10. Read the sentences and answer the questions.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme3img4.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme3img4.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="col-sm-12 col-md-12">
