--- a/templates/contenidos/unidad3/modulo3-unidad2-lesson2-tm1.html
+++ b/templates/contenidos/unidad3/modulo3-unidad2-lesson2-tm1.html
@@ -22,11 +22,11 @@
       <p>1. Read the text. Then complete the chart in your notebook so it is true for you.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <table class="table table-bordered">
