--- a/templates/contenidos/unidad3/modulo3-unidad2-lesson2-tm2.html
+++ b/templates/contenidos/unidad3/modulo3-unidad2-lesson2-tm2.html
@@ -52,7 +52,7 @@
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -61,7 +61,7 @@
 or false (F)? Correct the false sentences.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
