--- a/templates/contenidos/unidad3/modulo3-unidad2-lesson2-tm4.html
+++ b/templates/contenidos/unidad3/modulo3-unidad2-lesson2-tm4.html
@@ -22,11 +22,11 @@
       <p>10. In pairs, ask for and give advice. Use the information in the box and your own ideas.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>>
 
      <div class="col-sm-12 col-md-12"></div>
@@ -43,13 +43,13 @@ lesson 5 for ideas.</p>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme4img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme4img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme4img4.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson2Theme4img4.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
