--- a/templates/contenidos/unidad3/modulo3-unidad2-lesson3-tm1.html
+++ b/templates/contenidos/unidad3/modulo3-unidad2-lesson3-tm1.html
@@ -22,17 +22,17 @@
       <p>1. Complete the health advice with the headings in the box.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>2. In your notebook, complete the sentences with the words in the box.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme1img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme1img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <div class="col-sm-12 col-md-12">
