--- a/templates/contenidos/unidad3/modulo3-unidad2-lesson3-tm2.html
+++ b/templates/contenidos/unidad3/modulo3-unidad2-lesson3-tm2.html
@@ -39,7 +39,7 @@ spread = propagarse
     </table>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12"></div>
@@ -69,7 +69,7 @@ intensifier. The adjectives are underlined to help you.</p>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
