--- a/templates/contenidos/unidad3/modulo3-unidad2-lesson3-tm3.html
+++ b/templates/contenidos/unidad3/modulo3-unidad2-lesson3-tm3.html
@@ -35,7 +35,7 @@
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
@@ -75,7 +75,7 @@ stunning = impresionante
     </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme3img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme3img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
   
     <div class="col-sm-12 col-md-12"></div>
@@ -96,7 +96,7 @@ correct option to complete the rules.</p>
 adjectives? Write them in two lists in your notebook.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme3img4.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme3img4.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>11. Write two sentences describing the items in a-d using the adjectives in exercise 10.</p>
