--- a/templates/contenidos/unidad3/modulo3-unidad2-lesson3-tm4.html
+++ b/templates/contenidos/unidad3/modulo3-unidad2-lesson3-tm4.html
@@ -50,7 +50,7 @@ Look at the Useful expressions box to help you.</p>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
@@ -85,7 +85,7 @@ It’s important to …
       <p>14. Read the text. Which topic sentence from exercise 13 is it about?</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson3Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
    <p>15. Choose one of the topics from exercise 13 and write your opinion about it.
