--- a/templates/contenidos/unidad3/modulo3-unidad3-lesson1-tm1.html
+++ b/templates/contenidos/unidad3/modulo3-unidad3-lesson1-tm1.html
@@ -36,7 +36,7 @@ In my class, 29% of the students watch TV…</p>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -44,13 +44,13 @@ In my class, 29% of the students watch TV…</p>
     <p>2. Complete the sentences with the activities in exercise 1.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <p>3. Match the sentences to the pictures.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme1img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson1Theme1img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
       
       </div>
