--- a/templates/contenidos/unidad3/modulo3-unidad3-lesson2-tm2.html
+++ b/templates/contenidos/unidad3/modulo3-unidad3-lesson2-tm2.html
@@ -22,7 +22,7 @@
         <p>4. Read about eating habits in four different countries. Match the pictures to the texts a-d.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson2Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson2Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -47,7 +47,7 @@ soup = sopa <br>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson2Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson2Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
