--- a/templates/contenidos/unidad3/modulo3-unidad3-lesson2-tm3.html
+++ b/templates/contenidos/unidad3/modulo3-unidad3-lesson2-tm3.html
@@ -27,7 +27,7 @@
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson2Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo3/Modulo3Unidad3Lesson2Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
