--- a/templates/contenidos/unidad4/modulo4-unidad1-lesson1-tm1.html
+++ b/templates/contenidos/unidad4/modulo4-unidad1-lesson1-tm1.html
@@ -37,7 +37,7 @@
     </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>2. Read the sentences and complete them with the words in exercise 1.</p>
@@ -61,7 +61,7 @@ ______.</li>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-8 col-md-8">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
