--- a/templates/contenidos/unidad4/modulo4-unidad1-lesson1-tm2.html
+++ b/templates/contenidos/unidad4/modulo4-unidad1-lesson1-tm2.html
@@ -22,7 +22,7 @@
         <p>4. Read the text and the sentences. Are they true (T) or false (F)? Correct the false sentences.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -45,7 +45,7 @@
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson1Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
