--- a/templates/contenidos/unidad4/modulo4-unidad1-lesson2-tm3.html
+++ b/templates/contenidos/unidad4/modulo4-unidad1-lesson2-tm3.html
@@ -63,7 +63,7 @@ she have about using water?</p>
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <p>10. Listen again. How often does Tania and
@@ -76,7 +76,7 @@ write the activities in the correct column.</p>
     </audio>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson2Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     </div>
