--- a/templates/contenidos/unidad4/modulo4-unidad1-lesson3-tm4.html
+++ b/templates/contenidos/unidad4/modulo4-unidad1-lesson3-tm4.html
@@ -77,13 +77,13 @@ I see what you mean, but …
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme4img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad1Lesson3Theme4img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
