--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson1-tm2.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson1-tm2.html
@@ -31,13 +31,13 @@ sick. Listen to the presentation. Number the order in which the presenter says t
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -53,7 +53,7 @@ of the things from your list in exercise 2?</p>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme2img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme2img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       </div>
