--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson1-tm3.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson1-tm3.html
@@ -53,13 +53,13 @@ right now, these days, at the moment.</b> <br>
     </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>8. Complete the sentences with words from the box.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme3img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -88,7 +88,7 @@ rubbish. (recycle)</li>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme3img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme3img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
