--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson2-tm2.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson2-tm2.html
@@ -28,7 +28,7 @@
     </div>s
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -54,7 +54,7 @@ happen = ocurrir
     </table>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     </div>
