--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson2-tm4.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson2-tm4.html
@@ -25,7 +25,7 @@
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson2Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
