--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson3-tm2.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson3-tm2.html
@@ -81,7 +81,7 @@ on Wednesdays.</li>
     </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson3Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson3Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
