--- a/templates/contenidos/unidad4/modulo4-unidad3-lesson1-tm1.html
+++ b/templates/contenidos/unidad4/modulo4-unidad3-lesson1-tm1.html
@@ -38,14 +38,14 @@ outside.</li>
     </div>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson1Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson1Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <p>2. Read the sentences in exercise 1 again. In your notebook, write them under the correct
 heading in the chart.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson1Theme1img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson1Theme1img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <p>3. Add your own predictions to the chart. Share your ideas with a partner.</p>
