--- a/templates/contenidos/unidad4/modulo4-unidad3-lesson1-tm4.html
+++ b/templates/contenidos/unidad4/modulo4-unidad3-lesson1-tm4.html
@@ -23,7 +23,7 @@
       <p>9. Complete the sentences with the words in the box.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson1Theme4img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson1Theme4img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
