--- a/templates/contenidos/unidad4/modulo4-unidad3-lesson2-tm1.html
+++ b/templates/contenidos/unidad4/modulo4-unidad3-lesson2-tm1.html
@@ -24,7 +24,7 @@
 where you live.</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme1img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme1img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
