--- a/templates/contenidos/unidad4/modulo4-unidad3-lesson2-tm2.html
+++ b/templates/contenidos/unidad4/modulo4-unidad3-lesson2-tm2.html
@@ -23,13 +23,13 @@
       <p>4. Read the text and answer the questions..</p>
 
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme2img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme2img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme2img2.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme2img2.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
@@ -75,13 +75,13 @@ in the diagram.</p>
     <div class="col-sm-12 col-md-12">
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme2img3.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme2img3.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme2img4.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme2img4.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
