--- a/templates/contenidos/unidad4/modulo4-unidad3-lesson2-tm3.html
+++ b/templates/contenidos/unidad4/modulo4-unidad3-lesson2-tm3.html
@@ -115,7 +115,7 @@ There were lots of cars.</p>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad3Lesson2Theme3img1.png' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
