--- a/templates/contenidos/unidad4/modulo4.html
+++ b/templates/contenidos/unidad4/modulo4.html
@@ -29,7 +29,7 @@
         <div class="row">
         <div class="col-md-8 col-lg-8">
       <br />
-      <img src="{% static 'img/modulo4/modulo4.PNG' %}" class="img-responsive" alt=""/>
+      <img src="{% static 'img/modulo4/modulo4.png' %}" class="img-responsive" alt=""/>
             </div>
       <div class="col-md-4 col-lg-4">
           <br />
