--- a/templates/contenidos/unidad2/modulo2-unidad1-lesson2-tm1.html
+++ b/templates/contenidos/unidad2/modulo2-unidad1-lesson2-tm1.html
@@ -22,7 +22,7 @@
       <p>1. Match the free-time activities in the box to the pictures 1–8.</p>
 
        <div class="col-sm-12 col-md-12">
-            <img src="{% static 'img/modulo2/Modulo2Unidad1Lesson2Them14img1.png' %}" alt="No found">
+            <img src="{% static 'img/modulo2/Modulo2Unidad1Lesson2Them14img1.PNG' %}" alt="No found">
           </div> 
       <br>
       <br>
